syntax = "proto3";

package task1.api.orders.v1;

option csharp_namespace = "Presentation.Protos.Orders.V1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service OrderGrpcService {
  rpc CreateOrderAsync (CreateOrderRequest) returns (OrderResponse);
  rpc AddItemsToOrderAsync (AddItemsToOrderRequest) returns (OrderItemListResponse);
  rpc DeleteItemInOrderAsync (DeleteItemsInOrderRequest) returns (google.protobuf.Empty);
  rpc TransferToWorkAsync (OrderIdRequest) returns (google.protobuf.Empty);
  rpc CompleteOrderAsync (OrderIdRequest) returns (google.protobuf.Empty);
  rpc CancelOrderAsync (OrderIdRequest) returns (google.protobuf.Empty);
  rpc GetOrderHistoryAsync (GetOrderHistoryRequest) returns (OrderHistoryListResponse);
}

message CreateOrderRequest {
  string created_by = 1;
}

message OrderResponse {
  int64 id = 1;
}

message AddItemsToOrderRequest {
  int64 order_id = 1;
  repeated OrderItemCreate items = 2;
}

message DeleteItemsInOrderRequest {
  int64 order_id = 1;
  int64 product_id = 2;
}

message OrderItemListResponse {
  repeated OrderItemResponse order_items = 1;
}

message OrderItemResponse {
  int64 order_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message OrderItemCreate {
  int64 product_id = 1;
  int32 quantity = 2;
}

message OrderIdRequest {
  int64 order_id = 1;
}

message GetOrderHistoryRequest {
  int64 order_id = 1;
  int64 cursor = 2;
  int32 page_size = 3;
}

message OrderHistoryListResponse {
  repeated OrderHistoryResponse history = 1;
}

enum GrpcOrderHistoryItem {
  GRPC_ORDER_HISTORY_ITEM_UNSPECIFIED = 0;
  GRPC_ORDER_HISTORY_ITEM_CREATED = 1;
  GRPC_ORDER_HISTORY_ITEM_ADDED = 2;
  GRPC_ORDER_HISTORY_ITEM_REMOVED = 3;
  GRPC_ORDER_HISTORY_ITEM_STATE_CHANGED = 4;
}

enum GrpcOrderState {
  GRPC_ORDER_STATE_UNSPECIFIED = 0;
  GRPC_ORDER_STATE_CREATED = 1;
  GRPC_ORDER_STATE_PROCESSING = 2;
  GRPC_ORDER_STATE_COMPLETED = 3;
  GRPC_ORDER_STATE_CANCELLED = 4;
}

message OrderHistoryResponse {
  google.protobuf.Timestamp created_at = 1;

  GrpcOrderHistoryItem history_item = 2;

  HistoryPayload payload = 3;
}

message HistoryPayload {
  oneof kind {
    OrderCreatedPayload order_created = 1;
    StatusChangedPayload status_changed = 2;
    ItemAddedPayload item_added = 3;
    ItemDeletedPayload item_deleted = 4;
  }
}

message OrderCreatedPayload {
  string order_created_by = 1;
}

message StatusChangedPayload {
  GrpcOrderState old_state = 1;
  GrpcOrderState new_state = 2;
}

message ItemAddedPayload {
  int64 product_id = 1;
  int32 quantity = 2;
}

message ItemDeletedPayload {
  int64 product_id = 1;
}
